--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/inter": "^4.5.11",
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
