--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/inter": "^4.5.11",
+    "aos": "^3.0.0-beta.6",
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
     "nextjs-progressbar": "^0.0.14",
