--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-owl-carousel": "^2.3.3",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.4.7"
   },
   "devDependencies": {
